--- a/app/src/main/res/layout/activity_sheet59.xml
+++ b/app/src/main/res/layout/activity_sheet59.xml
@@ -448,7 +448,7 @@
         android:layout_height="33dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Active Line:"
+        android:text="@string/Active_line"
         android:textIsSelectable="false"
         android:textSize="24sp"
         android:textStyle="bold"
